bower package update

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "*.json",
     "src",
     "*.md",
-    "README"
+    "README",
+    "Gruntfile.js",
+    "bower.json"
   ],
   "authors": [
     "Kerry Gould <kgould@set.tv>"
