bower package update

--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,9 @@
     "dist/fonts"
   ],
   "ignore": [
-    "./.*",
+    "./.json",
     "*/.*",
-    "src",
+    "./src",
     "*.md",
     "README",
     "Gruntfile.js"
