--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "dependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-sass": "~0.8.1",
     "grunt-svgmin": "~0.2.0",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
@@ -16,8 +14,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-bower-install": "~0.7.0",
-    "font-awesome": "4.2.0"
+    "grunt-bower-install": "~0.7.0"
   },
   "engines": {
     "node": ">=0.8.0"
